Fix dumb overflow

--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ body {
     font-family: "Poppins", sans-serif;
     font-size: 50px;
 
+    overflow: scroll;
+
     width: 100%;
     height: 100%;
     position: fixed;
@@ -49,7 +51,6 @@ body {
     height: 100%;
 
     background: #141414;
-    overflow-x: hidden;
     z-index: 2;
 
     color: #707070;
